--- a/docs/d4st-docker-guide.ditamap
+++ b/docs/d4st-docker-guide.ditamap
@@ -32,16 +32,16 @@
         <topicmeta>
           <navtitle>External Web Sites</navtitle>
         </topicmeta>
-        <keydef keys="website-dfst-github-organization" format="html" scope="external"
+        <keydef keys="website-d4st-github-organization" format="html" scope="external"
           href="http://github.com/dita-for-small-teams"/>
-        <keydef href="https://github.com/dita-for-small-teams/dfst-docker"
-          keys="website-dfst-github-dfst-docker-project" scope="external" format="html">
+        <keydef href="https://github.com/dita-for-small-teams/d4st-docker"
+          keys="website-d4st-github-d4st-docker-project" scope="external" format="html">
           <topicmeta>
-            <navtitle>https://github.com/dita-for-small-teams/dfst-docker</navtitle>
+            <navtitle>https://github.com/dita-for-small-teams/d4st-docker</navtitle>
           </topicmeta>
         </keydef>
         <keydef href="https://github.com/dita-for-small-teams/dita-for-small-teams/releases"
-          keys="website-dfst-github-project-releases" format="html" scope="external">
+          keys="website-d4st-github-project-releases" format="html" scope="external">
           <topicmeta>
             <navtitle>https://github.com/dita-for-small-teams/dita-for-small-teams/releases</navtitle>
           </topicmeta>
@@ -73,34 +73,34 @@
         <topicmeta>
           <navtitle>Media Objects</navtitle>
         </topicmeta>
-        <keydef href="dfst-docker-guide/getting-started/media/docker-quickstart-icon.png"
+        <keydef href="d4st-docker-guide/getting-started/media/docker-quickstart-icon.png"
           keys="icon-docker-quickstart" format="png" navtitle="Docker Quickstart Icon"/>
-        <keydef href="dfst-docker-guide/getting-started/media/gitlab-web-login-01.png"
+        <keydef href="d4st-docker-guide/getting-started/media/gitlab-web-login-01.png"
           keys="screenshot-gitlab-login-01" format="png">
           <topicmeta>
             <navtitle>GitLab login page</navtitle>
           </topicmeta>
         </keydef>
-        <keydef href="dfst-docker-guide/getting-started/media/gitlab-web-projects-01.png"
+        <keydef href="d4st-docker-guide/getting-started/media/gitlab-web-projects-01.png"
           keys="screenshot-gitlab-projects-01" format="png">
           <topicmeta>
             <navtitle>GitLab projects page</navtitle>
           </topicmeta>
         </keydef>
-        <keydef href="dfst-docker-guide/getting-started/media/gitlab-user-icon-01.png"
+        <keydef href="d4st-docker-guide/getting-started/media/gitlab-user-icon-01.png"
           keys="icon-gitlab-user-01" format="png">
           <topicmeta>
             <navtitle>GitLab user icon</navtitle>
           </topicmeta>
         </keydef>
-        <keydef href="dfst-docker-guide/getting-started/media/gitlab-gear-icon-01.png"
+        <keydef href="d4st-docker-guide/getting-started/media/gitlab-gear-icon-01.png"
           keys="icon-gitlab-gear-01" format="png">
           <topicmeta>
             <navtitle>GitLab gear icon</navtitle>
           </topicmeta>
         </keydef>
       </topicgroup>
-      <keydef href="dfst-docker-guide/getting-started/media/gitlab-web-change-username-01.png"
+      <keydef href="d4st-docker-guide/getting-started/media/gitlab-web-change-username-01.png"
         keys="screenshot-gitlab-change-username-01" format="png">
         <topicmeta>
           <navtitle>GitLab change username</navtitle>
@@ -111,32 +111,32 @@
       <toc/>
       <figurelist/>
     </booklists>
-    <topicref href="dfst-docker-guide/frontmatter/about-dfst-docker-guide.dita"/>
+    <topicref href="d4st-docker-guide/frontmatter/about-d4st-docker-guide.dita"/>
   </frontmatter>
-  <chapter keys="getting-started" href="dfst-docker-guide/getting-started/getting-started.dita">
-    <topicref href="dfst-docker-guide/getting-started/dfst-container-quick-start-01.dita"
-      keys="dfst-container-quick-start"/>
+  <chapter keys="getting-started" href="d4st-docker-guide/getting-started/getting-started.dita">
+    <topicref href="d4st-docker-guide/getting-started/d4st-container-quick-start-01.dita"
+      keys="d4st-container-quick-start"/>
   </chapter>
-  <chapter href="dfst-docker-guide/extending/extending_the_dfst_docker_system.dita"
-    keys="extending-dfst-system">
-    <topicref href="dfst-docker-guide/extending/building_the_dfst_containers.dita"
-      keys="building-dfst-containers"/>
+  <chapter href="d4st-docker-guide/extending/extending_the_d4st_docker_system.dita"
+    keys="extending-d4st-system">
+    <topicref href="d4st-docker-guide/extending/building_the_d4st_containers.dita"
+      keys="building-d4st-containers"/>
   </chapter>
   <chapter
-    href="dfst-docker-guide/system-description/chapter-dfst-container-system-description.dita"
+    href="d4st-docker-guide/system-description/chapter-d4st-container-system-description.dita"
     keys="system-description">
-    <topicref href="dfst-docker-guide/system-description/dfst-system-overview.dita" keys="dfst-system-overview"/>
-    <topicref href="dfst-docker-guide/system-description/dfst-system-configuration.dita"
-      keys="dfst-system-config"/>
+    <topicref href="d4st-docker-guide/system-description/d4st-system-overview.dita" keys="d4st-system-overview"/>
+    <topicref href="d4st-docker-guide/system-description/d4st-system-configuration.dita"
+      keys="d4st-system-config"/>
   </chapter>
-  <chapter href="dfst-docker-guide/docker-container-ref/chapter-docker-container-ref.dita"
+  <chapter href="d4st-docker-guide/docker-container-ref/chapter-docker-container-ref.dita"
     keys="docker-container-ref">
-    <topicref href="dfst-docker-guide/docker-container-ref/container-ref-dfst-dita-ot.dita"
-      keys="container-ref-dfst-dita-ot"/>
-    <topicref href="dfst-docker-guide/docker-container-ref/container-ref-link-manager-basex.dita"
+    <topicref href="d4st-docker-guide/docker-container-ref/container-ref-d4st-dita-ot.dita"
+      keys="container-ref-d4st-dita-ot"/>
+    <topicref href="d4st-docker-guide/docker-container-ref/container-ref-link-manager-basex.dita"
       keys="container-ref-link-manager-basex"/>
-    <topicref href="dfst-docker-guide/docker-container-ref/container-ref-dfst-gitlab.dita"
-      keys="container-ref-dfst-gitlab"/>
+    <topicref href="d4st-docker-guide/docker-container-ref/container-ref-d4st-gitlab.dita"
+      keys="container-ref-d4st-gitlab"/>
   </chapter>
   <backmatter>
     <topicref href="glossary/glossary.dita" keys="glossary">
