--- a/docs/d4st-docker-guide/docker-container-ref/container-ref-d4st-dita-ot.dita
+++ b/docs/d4st-docker-guide/docker-container-ref/container-ref-d4st-dita-ot.dita
@@ -3,9 +3,9 @@
 <reference id="container-ref-link-manager-basex">
   <title>DFST DITA Open Toolkit Docker Container</title>
   <titlealts>
-    <navtitle>dfst/dita-ot</navtitle>
+    <navtitle>d4st/dita-ot</navtitle>
   </titlealts>
-  <shortdesc>The dfst/dita-ot container provides a generic DITA Open Toolkit image.</shortdesc>
+  <shortdesc>The d4st/dita-ot container provides a generic DITA Open Toolkit image.</shortdesc>
   <refbody>
     <section>
       <p>The dita-ot container contains a DITA Open Toolkit image based on the full DITA for
@@ -17,21 +17,21 @@
         project (TBD).</p>
       <p>The Open Toolkit container is required by the <xref
           keyref="container-ref-link-manager-basex"/> container, which uses its catalogs. It is also
-        required by the <xref keyref="container-ref-dfst-gitlab"/> container,
+        required by the <xref keyref="container-ref-d4st-gitlab"/> container,
         which uses it for running Open Toolkit build jobs.</p>
     </section>
     <section spectitle="Container Details">
       <dl>
         <dlentry>
           <dt>URL</dt>
-          <dd><xref href="https://hub.docker.com/r/dfst/dita-ot" format="html" scope="external"
-              >https://hub.docker.com/r/dfst/dita-ot</xref></dd>
+          <dd><xref href="https://hub.docker.com/r/d4st/dita-ot" format="html" scope="external"
+              >https://hub.docker.com/r/d4st/dita-ot</xref></dd>
         </dlentry>
         <dlentry>
           <dt>container name</dt>
-          <dd>dfst/dita-ot<p>The latest version reflects the latest DITA Open Toolkit release.
+          <dd>d4st/dita-ot<p>The latest version reflects the latest DITA Open Toolkit release.
               Containers for other versions use the OT version number as the tag, e.g.
-              "dfst/dita-ot:1.8.5".</p></dd>
+              "d4st/dita-ot:1.8.5".</p></dd>
         </dlentry>
       </dl>
     </section>
@@ -44,7 +44,7 @@
           <filepath>/opt/dita-ot/DITA-OT</filepath>. Other containers can use this volume in order
         to have direct access to the open toolkit.</p>
       <p>To simply run the container so it is available to other
-        containers:<codeblock>run --name=dita-ot dfst/dita-ot</codeblock></p>
+        containers:<codeblock>run --name=dita-ot d4st/dita-ot</codeblock></p>
       <p>The parameters are:<parml>
           <plentry>
             <pt>--name=dita-ot</pt>
@@ -53,7 +53,7 @@
                 /bin/bash</codeph>.</pd>
           </plentry>
         </parml></p>
-      <p>To mount local directory add the <parmname>-v</parmname> parameter:<codeblock>run --name=dita-ot <b>-v /Users/ekimber/workspace:/opt/dita-ot/userdata</b> /dfst/dita-ot</codeblock><parml>
+      <p>To mount local directory add the <parmname>-v</parmname> parameter:<codeblock>run --name=dita-ot <b>-v /Users/ekimber/workspace:/opt/dita-ot/userdata</b> /d4st/dita-ot</codeblock><parml>
           <plentry>
             <pt>-v ...</pt>
             <pd>Connects a local directory (<filepath>/Users/ekimber/workspace</filepath>) to the
@@ -68,14 +68,14 @@
               </note></pd>
           </plentry>
           <plentry>
-            <pt>dfst/dita-ot</pt>
+            <pt>d4st/dita-ot</pt>
             <pd>This is the name of the container to run. If the container is not already on your
               system Docker will pull it down from the Docker hub, using the default tag "latest",
               which is normally what you want. If you want a specific tag you can specify it as
                   <codeph>:<varname>tagname</varname></codeph> after the container name. Note that
               the latest version will reflect the 2.x version of the Open Toolkit. Other versions
-              use the Open Toolkit version number as the tag, e.g., "dfst/dita-ot:1.8.5".<p>If you
-                need to update your local copy you can use <codeph>docker pull dfst/dita-ot</codeph>
+              use the Open Toolkit version number as the tag, e.g., "d4st/dita-ot:1.8.5".<p>If you
+                need to update your local copy you can use <codeph>docker pull d4st/dita-ot</codeph>
                 to get the latest version.</p></pd>
           </plentry>
         </parml>
