--- a/docs/d4st-docker-guide/extending/building_the_d4st_containers.dita
+++ b/docs/d4st-docker-guide/extending/building_the_d4st_containers.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="building_the_dfst_containers">
+<concept id="building_the_d4st_containers">
  <title>Building the DFST Containers</title>
  <shortdesc>The base DFST containers are built automatically by the Docker hub site but you can
     build containers directly using the <cmdname>docker build</cmdname> command.</shortdesc>
@@ -9,10 +9,10 @@
       appropriate container tag (the name by which you refer to the container in your Docker compose
       file).</p>
     <p>For example, to rebuild the GitLab container you would navigate to the
-        <filepath>containers/gitlab-dfst</filepath> directory and then run the <cmdname>docker
+        <filepath>containers/gitlab-d4st</filepath> directory and then run the <cmdname>docker
         build</cmdname> command like
       so:<codeblock>$ cd containers/gitlib-dist
-$ docker build -t dfst/gitlab-dfst .
+$ docker build -t d4st/gitlab-d4st .
 Sending build context to Docker daemon 14.85 kB
 Step 1/6 : FROM sameersbn/gitlab
  ---> 647c3323c92f
@@ -20,7 +20,7 @@ Step 2/6 : MAINTAINER Eliot Kimber "ekimber@contrext.com"
  ---> Running in bb6abe4faa62
  ---> 8e9a1404cd76
 Removing intermediate container bb6abe4faa62
-Step 3/6 : COPY admin-scripts /var/opt/dfst/bin/
+Step 3/6 : COPY admin-scripts /var/opt/d4st/bin/
  ---> 3cd1cd7884af
 Removing intermediate container cc00ac24db81
 ... (lots more messages) ...
