--- a/docs/d4st-docker-guide/extending/extending_the_d4st_docker_system.dita
+++ b/docs/d4st-docker-guide/extending/extending_the_d4st_docker_system.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="extending_the_dfst_docker_system">
+<concept id="extending_the_d4st_docker_system">
  <title>Extending the DFST Docker System</title>
  <shortdesc>It is easy to extend or modify the DFST system by defining your own containers that
     build on the base containers.</shortdesc>
@@ -13,10 +13,10 @@
         <cmdname>docker-compose</cmdname>. This section provides instructions on how to build the
       out-of-the-box DFST containers using <cmdname>docker-compose</cmdname> and provides guidance
       on how to set up and use your own containers.</p>
-    <p>These instructions assume that you have a copy of the dfst-docker project from GitHub (<xref
-        keyref="website-dfst-github-dfst-docker-project"/>) in some convenient location, such as
-        <filepath>c:\workspace\dfst-docker</filepath> or similar. In these instructions
-        "<filepath>dfst-docker</filepath>" is used as the root directory for the project. Any
+    <p>These instructions assume that you have a copy of the d4st-docker project from GitHub (<xref
+        keyref="website-d4st-github-d4st-docker-project"/>) in some convenient location, such as
+        <filepath>c:\workspace\d4st-docker</filepath> or similar. In these instructions
+        "<filepath>d4st-docker</filepath>" is used as the root directory for the project. Any
       relative paths in instructions are relative to the root of the project unless stated
       otherwise.</p>
     <p>The instructions use Linux/OS X file path conventions for simplicity but all the instructions
