--- a/docs/d4st-docker-guide/extending/extending_the_d4st_docker_system.dita
+++ b/docs/d4st-docker-guide/extending/extending_the_d4st_docker_system.dita
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="extending_the_d4st_docker_system">
- <title>Extending the DFST Docker System</title>
- <shortdesc>It is easy to extend or modify the DFST system by defining your own containers that
+ <title>Extending the D4ST Docker System</title>
+ <shortdesc>It is easy to extend or modify the D4ST system by defining your own containers that
     build on the base containers.</shortdesc>
  <conbody>
   <p>The Docker technology is layered in a way that makes it easy to build on the work of others
-      with a minimum of duplication of code or runtime artifacts. The DFST containers have been
+      with a minimum of duplication of code or runtime artifacts. The D4ST containers have been
       setup to make extending them as easy as possible.</p>
-    <p>The DFST containers are organized using the <cmdname>docker-compose</cmdname> facility. See
+    <p>The D4ST containers are organized using the <cmdname>docker-compose</cmdname> facility. See
       the <xref keyref="website-docker-docs">Docker documentation</xref> for details on how to use
         <cmdname>docker-compose</cmdname>. This section provides instructions on how to build the
-      out-of-the-box DFST containers using <cmdname>docker-compose</cmdname> and provides guidance
+      out-of-the-box D4ST containers using <cmdname>docker-compose</cmdname> and provides guidance
       on how to set up and use your own containers.</p>
     <p>These instructions assume that you have a copy of the d4st-docker project from GitHub (<xref
         keyref="website-d4st-github-d4st-docker-project"/>) in some convenient location, such as
