--- a/docs/d4st-docker-guide/getting-started/d4st-container-quick-start-01.dita
+++ b/docs/d4st-docker-guide/getting-started/d4st-container-quick-start-01.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="Untitled9">
-    <title>DFST Container Quick Start</title>
+    <title>D4ST Container Quick Start</title>
     <shortdesc>If you are familiar with Docker you can follow these instructions to get going as
     quickly as possible. </shortdesc>
     <taskbody>
@@ -9,7 +9,7 @@
       <p>These instructions reflect the use of Docker for Windows or Docker for Mac, which both
         provide tight integration of Docker with the operating system. The instructions should be
         the same for Docker on Linux.</p>
-      <p>The DFST system uses git to manage your source code. You must have a git client installed
+      <p>The D4ST system uses git to manage your source code. You must have a git client installed
         on your machine. Under macOS this should already be the case (test it by typing "git" in a
         command window). The built-in version of git may be older than you want, in which case you
         can use homebrew to install a newer version of git (see <xref keyref="website-homebrew"
@@ -53,7 +53,7 @@
         </info>
       </step>
       <step>
-        <cmd>Unzip the DFST release package to somewhere convenient, e.g. <filepath
+        <cmd>Unzip the D4ST release package to somewhere convenient, e.g. <filepath
             platform="windows">c:\apps</filepath> or <filepath>~/apps</filepath>. This is where the
             <cmdname>d4st</cmdname> command will live.</cmd>
         <stepresult>
@@ -62,14 +62,14 @@
 README.md
 containers
 d4st</codeblock></p>
-          <p>The <filepath>d4st</filepath> script is the main script for managing the DFST
+          <p>The <filepath>d4st</filepath> script is the main script for managing the D4ST
             components through Docker. It is a bash shell script intended to be run in a bash shell.
             Under Windows you can run it in a git bash shell.</p>
         </stepresult>
       </step>
       <step>
         <cmd>Start a bash shell (under Windows, a git command window, which provides a bash shell)
-          and navigate to the directory for the DFST package:</cmd>
+          and navigate to the directory for the D4ST package:</cmd>
         <info>
           <codeblock>ekimber@WIN-HH0I81E3DAU MINGW64 /c
 $ cd apps/d4st-docker
@@ -98,7 +98,7 @@ $ </codeblock></p>
         <info>
           <codeblock>ekimber@WIN-HH0I81E3DAU MINGW64 /c/temp/d4st-docker
 $ ./d4st start
-Starting DFST Docker containers in the background. Use docker-compose commands or Kitematic to view the status.
+Starting D4ST Docker containers in the background. Use docker-compose commands or Kitematic to view the status.
 Pulling redis (sameersbn/redis:latest)...
 latest: Pulling from sameersbn/redis
 … lots more messages here ...
@@ -116,14 +116,14 @@ f15cb9d8c17a        sameersbn/redis:latest        "/sbin/entrypoint.sh"    4 min
           <p>The first time you do this Docker has to download all the images for the containers and
             this can take a while. The next time you run it, it will be quick.</p>
           <p>The exact set of containers may be different depending on the current configuration of
-            the DFST container set.</p>
+            the D4ST container set.</p>
         </info>
         <stepresult>
-          <p>The DFST containers should start. It will take a minute or two for the Web services in
+          <p>The D4ST containers should start. It will take a minute or two for the Web services in
             the containers to start up completely.</p>
           <p>The first time you run the <cmdname>d4st</cmdname> command it creates the file
               <filepath>d4st/.env</filepath>. This file contains environment settings used by the
-            docker commands. You can edit this file to change the ports used by the different DFST
+            docker commands. You can edit this file to change the ports used by the different D4ST
             Web services. You will also edit this file to add the GitLab private token in a later
             step.</p>
           <p>The first time you run GitLab it has to do quite a lot of setup and that may take
@@ -168,7 +168,7 @@ $ /usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/ekimber/apps/dita-for-smal
       <stepsection>
         <p>To use GitLab as a remote git repository you must set up a GitLab user for yourself (or
           anyone who will be connecting to the GitLab server) and then create GitLab projects
-          corresponding to your local git repositories that you want to use with the DFST system.
+          corresponding to your local git repositories that you want to use with the D4ST system.
           This requires a one-time task of logging into GitLab as the root user so you can get the
           magic "private token" required to use the GitLab API. Once you've done this the rest of
           the user and project setup can be done with the <cmdname>d4st</cmdname>
@@ -331,7 +331,7 @@ $ </codeblock>
         </info>
         <stepresult>
           <p>The Thunderbird files have been pushed to the remote GitLab repository and copied to
-            the DFST Link Manager database. You can use the GitLab Web application to verify that
+            the D4ST Link Manager database. You can use the GitLab Web application to verify that
             the files are now in GitLab.</p>
         </stepresult>
       </step>
@@ -372,11 +372,11 @@ $ </codeblock>
     </steps>
     <result id="result_t1g_htq_ww">
       <p>You now have a sample DITA-based documentation source repository, the Thunderbird project,
-        set up and connected to the DFST link manager. You can experiment with modifying the source
+        set up and connected to the D4ST link manager. You can experiment with modifying the source
         files and committing new versions to GitLab or creating new branches and seeing how those
-        updates and new branches are reflected in the DFST Link Manager.</p>
+        updates and new branches are reflected in the D4ST Link Manager.</p>
       <p>Having followed this process you should be able to quickly add your own documents' git
-        repositories to the DFST GitLab server in order to take advantage of the DFST Link
+        repositories to the D4ST GitLab server in order to take advantage of the D4ST Link
         Manager.</p>
     </result>
     </taskbody>
