--- a/docs/d4st-docker-guide/system-description/chapter-d4st-container-system-description.dita
+++ b/docs/d4st-docker-guide/system-description/chapter-d4st-container-system-description.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="chapter-d4st-container-system-description">
- <title>DFST Container System Description</title>
- <shortdesc>The DFST container system is composed from a set of Docker containers where each
-    container provides a separate component of the complete DFST system.</shortdesc>
+ <title>D4ST Container System Description</title>
+ <shortdesc>The D4ST container system is composed from a set of Docker containers where each
+    container provides a separate component of the complete D4ST system.</shortdesc>
 </concept>
